# softpack-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.frontend  Makefile  README.md  README_FRONTEND.md  SETUP_COMPLETE.md  app.js  docker-compose.yml  frontend.html  index.html  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  run_both.py  serve_frontend.js  serve_frontend.py  softpack-mcp.service  styles.css
examples/: README.md  copy_package_example.py  recipe_example.py  session_example.py  streaming_client.py
scripts/: pre-commit-uvx.sh
softpack_mcp/: __init__.py  cli.py  config.py  main.py  mcp_schema_patch.py  repos.yaml
softpack_mcp/models/: __init__.py  requests.py  responses.py
softpack_mcp/services/: __init__.py  access_service.py  git_service.py  session_manager.py  spack_service.py
softpack_mcp/tools/: __init__.py  access.py  git.py  recipes.py  sessions.py  spack.py
softpack_mcp/utils/: __init__.py  exceptions.py  logging.py
tests/: test_git_pr_creation.py  test_integration_dit.py  test_main.py  test_spack_service.py
